otel-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo
  namespace: opentelemetry
spec:
  ingressClassName: nginx
  rules:
    - host: otel-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-demo
                port:
                  number: 8080
